apps/pipeline/pr-trigger.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    eventlistener: eventlistener-git-pr-status-github-pr
  name: eventlistener-git-pr-status
  namespace: pipeline-demo
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-eventlistener-git-pr-status-github-pr
