apps/pipeline/push-trigger.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    eventlistener: eventlistener-git-push-status-github
  name: eventlistener-git-push-status-route
  namespace: pipeline-demo
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-eventlistener-git-push-status-github
