apps/pipeline/trigger-template.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    eventlistener: sanitize-yaml-el
  name: sanitize-yaml-route
  namespace: pipeline-demo
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-sanitize-yaml-el
